<resources>
    <string name="app_name">MoviesApp</string>
    <string name="popular">Popular</string>
    <string name="favorites">Favorites</string>

    <string name="date">Date: %1$s</string>
    <string name="genre">Genre: %1$s</string>
    <string name="vote_count">Vote count: %1$d</string>
    <string name="vote_average">Vote average: %1$f</string>
    <string name="no_favorites">No favorites</string>
    <string name="not_found">Not found</string>
    <string name="search_hint">Enter query</string>
    <string name="search">Search</string>
    <string name="selected_genres">Selected genres:</string>
    <string name="select_genre">Select genre</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="nothing_selected">Nothing selected</string>
</resources>
